--- a/bin/application/FXMLDocument.fxml
+++ b/bin/application/FXMLDocument.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Menu?>
@@ -10,12 +9,11 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.FXMLDocumentController">
    <children>
-      <BorderPane prefHeight="400.0" prefWidth="600.0">
+      <BorderPane fx:id="contentPane" prefHeight="400.0" prefWidth="600.0">
          <top>
-            <MenuBar prefHeight="25.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+            <MenuBar fx:id="mainMenu" prefHeight="25.0" prefWidth="600.0" BorderPane.alignment="CENTER">
               <menus>
                 <Menu mnemonicParsing="false" text="File">
                   <items>
@@ -38,17 +36,17 @@
          <center>
             <LineChart fx:id="chart" BorderPane.alignment="CENTER">
               <xAxis>
-                <CategoryAxis side="BOTTOM" />
+                <NumberAxis lowerBound="1.0" side="BOTTOM" upperBound="10.0" fx:id="xAxis" />
               </xAxis>
               <yAxis>
-                <NumberAxis side="LEFT" />
+                <NumberAxis fx:id="yAxis" lowerBound="1.0" side="LEFT" upperBound="10.0" />
               </yAxis>
             </LineChart>
          </center>
          <right>
-            <Pane prefHeight="375.0" prefWidth="150.0" style="-fx-border-width: 1; -fx-border-color: gray;" BorderPane.alignment="CENTER">
+            <Pane fx:id="parameterPane" prefHeight="375.0" prefWidth="150.0" style="-fx-border-width: 1; -fx-border-color: gray;" BorderPane.alignment="CENTER">
                <children>
-                  <Spinner fx:id="changePointHeight" layoutX="1.0" prefHeight="25.0" prefWidth="148.0" />
+                  <Spinner fx:id="pointHeightSpinner" editable="true" layoutX="1.0" prefHeight="25.0" prefWidth="148.0" />
                </children>
             </Pane>
          </right>
