--- a/src/application/FXMLDocument.fxml
+++ b/src/application/FXMLDocument.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -60,11 +60,12 @@
                         <Insets bottom="5.0" top="5.0" />
                      </VBox.margin>
                   </Label>
-                  <Spinner fx:id="pointHeightSpinner" disable="true" editable="true" prefHeight="25.0" prefWidth="200.0">
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                  </Spinner>
+                  <Pane prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <TextField fx:id="pointHeightTextField" disable="true" onAction="#changeNodeValue" prefHeight="25.0" prefWidth="167.0" />
+                        <Button fx:id="pointHeightButton" disable="true" layoutX="167.0" mnemonicParsing="false" onAction="#changeNodeValue" prefWidth="33.0" text="OK" />
+                     </children>
+                  </Pane>
                </children>
             </VBox>
          </center>
